# nuc_manipulator_20260118

./: fail.txt  log5.txt  log_1.txt  tasklist_executor.py
Software/: .gitignore  actionCommand.py  plan_validator.py  python_publisher copy.py  python_publisher.py  task_planning copy 2.py  task_planning copy.py  task_planning.py  test_pub.py  test_task_planning.py
Software/pybullet/: ArmInfo.py  Robot.py  dual_arm_t.py  object3D.py  sim_joint_sliders.py  sim_t_old.py  simulator.py  single_arm_env.py
Software/pybullet/open_manipulator_p_description/urdf/: open_manipulator_p.urdf  open_manipulator_p_with_gripper.urdf
Software/pybullet/全身URDF_第一版20250923.SLDASM/: CMakeLists.txt  package.xml
Software/pybullet/全身URDF_第一版20250923.SLDASM/config/: joint_names_全身URDF_第一版20250923.SLDASM.yaml
Software/pybullet/全身URDF_第一版20250923.SLDASM/launch/: display.launch  gazebo.launch
Software/pybullet/全身URDF_第一版20250923.SLDASM/meshes/: left1.STL  left2.STL  left3.STL  left4.STL  left5.STL  left6.STL  neck1.STL  right1.STL  right2.STL  right3.STL  right4.STL  right5.STL  right6.STL
Software/pybullet/全身URDF_第一版20250923.SLDASM/urdf/: 全身URDF_第一版20250923.SLDASM.csv  全身URDF_第一版20250923.SLDASM.urdf
Software/pybullet/全身URDF_第二版20250923.SLDASM/: CMakeLists.txt  package.xml
Software/pybullet/全身URDF_第二版20250923.SLDASM/config/: joint_names_全身URDF_第二版20250923.SLDASM.yaml
Software/pybullet/全身URDF_第二版20250923.SLDASM/launch/: display.launch  gazebo.launch
Software/pybullet/全身URDF_第二版20250923.SLDASM/meshes/: left1.STL  left2.STL  left3.STL  left4.STL  left5.STL  left6.STL  neck1.STL  right1.STL  right2.STL  right3.STL  right4.STL  right5.STL  right6.STL
Software/pybullet/全身URDF_第二版20250923.SLDASM/urdf/: 全身URDF_第二版20250923.SLDASM.csv  全身URDF_第二版20250923.SLDASM.urdf
Software/pybullet/單手URDF_第二張圖_第一版20250921.SLDASM/: CMakeLists.txt  package.xml
Software/pybullet/單手URDF_第二張圖_第一版20250921.SLDASM/launch/: display.launch  gazebo.launch
Software/pybullet/單手URDF_第二張圖_第一版20250921.SLDASM/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
Software/pybullet/單手URDF_第二張圖_第一版20250921.SLDASM/urdf/: 單手URDF_第二張圖_第一版20250921.SLDASM.csv  單手URDF_第二張圖_第一版20250921.SLDASM.urdf
Software/pybullet/單手URDF_第二張圖_第二版20250922.SLDASM/: CMakeLists.txt  package.xml
Software/pybullet/單手URDF_第二張圖_第二版20250922.SLDASM/config/: joint_names_單手URDF_第二張圖_第二版20250922.SLDASM.yaml
Software/pybullet/單手URDF_第二張圖_第二版20250922.SLDASM/launch/: display.launch  gazebo.launch
Software/pybullet/單手URDF_第二張圖_第二版20250922.SLDASM/meshes/: base_link.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link7.STL
Software/pybullet/單手URDF_第二張圖_第二版20250922.SLDASM/urdf/: 單手URDF_第二張圖_第二版20250922.SLDASM.csv  單手URDF_第二張圖_第二版20250922.SLDASM.urdf
Software/src/: CMakeLists copy.txt  CMakeLists.txt  main.cpp  package.xml  use.txt
Software/src/Manipulator/: CMakeLists.txt  LeftArm.cpp  LeftArm.h  RightArm copy.cpp  RightArm.cpp  RightArm.h
Software/src/Manipulator/ArmInfo/: ArmInfo.cpp  ArmInfo.h  CMakeLists.txt
Software/src/Manipulator/others/: Robot.cpp  Robot.h  test_gripper_main.cpp
Software/src/Neck/: CMakeLists.txt  Neck.cpp  Neck.h
Software/src/Robot/: CMakeLists copy.txt  CMakeLists.txt  Robot.cpp  Robot.h  package.xml
Software/src/Robot/srv/: ArmBatchTransform.srv  BatchTransform.srv
